--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,11 +34,8 @@ if (PFUNIT)
   add_subdirectory (MAPL_pFUnit EXCLUDE_FROM_ALL)
 endif ()
 
-# Special cases - MAPL_cfio, GMAO_gfio, and GFDL_fms are built twice with two
+# Special cases - GMAO_gfio, and GFDL_fms are built twice with two
 # different precisions.
-add_subdirectory (MAPL_cfio MAPL_cfio_r4)
-add_subdirectory (MAPL_cfio MAPL_cfio_r8)
-
 add_subdirectory (GMAO_gfio GMAO_gfio_r4)
 add_subdirectory (GMAO_gfio GMAO_gfio_r8)
 add_dependencies (GMAO_gfio_r4 GMAO_gfio_r8)
