--- a/GMAO_etc/CMakeLists.txt
+++ b/GMAO_etc/CMakeLists.txt
@@ -1,24 +1,34 @@
 set (CMAKE_Fortran_FLAGS_RELEASE "-O3 ${GEOS_Fortran_Release_FPE_Flags} ${ALIGNCOM}")
 
-add_executable(argopt argopt.c)
-add_executable(fresolv.x fresolv.f90)
-add_executable(gethdftinc.x gethdftinc.f)
-add_executable(zeit_ci.x zeit_ci.f zeit_usage.f)
-add_executable(zeit_co.x zeit_co.f zeit_usage.f)
-add_executable(zeit_pr.x zeit_pr.f zeit_usage.f zeit_read.f zeit_jday.f)
+ecbuild_add_executable (
+  TARGET argopt
+  SOURCES argopt.c)
 
-target_link_libraries(fresolv.x GMAO_mpeu)
-target_link_libraries(gethdftinc.x GMAO_mpeu)
-target_link_libraries(gethdftinc.x ${NETCDF_LIBRARIES})
-target_link_libraries(gethdftinc.x Threads::Threads)
-target_link_libraries(zeit_ci.x GMAO_mpeu)
-target_link_libraries(zeit_co.x GMAO_mpeu)
-target_link_libraries(zeit_pr.x GMAO_mpeu)
+ecbuild_add_executable (
+  TARGET fresolv.x
+  SOURCES fresolv.f90
+  LIBS GMAO_mpeu)
+ecbuild_add_executable (
+  TARGET gethdftinc.x
+  SOURCES gethdftinc.f
+  LIBS GMAO_mpeu ${NETCDF_LIBRARIES} Threads::Threads
+  INCLUDES ${INC_NETCDF})
+  
+ecbuild_add_executable (
+  TARGET zeit_ci.x
+  SOURCES zeit_ci.f zeit_usage.f
+  LIBS GMAO_mpeu)
+ecbuild_add_executable (
+  TARGET zeit_co.x
+  SOURCES zeit_co.f zeit_usage.f
+  LIBS GMAO_mpeu)
+ecbuild_add_executable (
+  TARGET zeit_pr.x
+  SOURCES zeit_pr.f zeit_usage.f zeit_read.f zeit_jday.f
+  LIBS GMAO_mpeu)
 
-include_directories(${include_GMAO_mpeu})
-include_directories(${INC_NETCDF})
 
-set(execs
+set(exec_scripts
     Manipulate_time.pm
     tick
     stripname
@@ -28,6 +38,6 @@ set(execs
     GMAO_utils.pm
    )
 
-foreach(exec ${execs})
+foreach(exec ${exec_scripts})
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${exec} ${CMAKE_BINARY_DIR}/bin/${exec} COPYONLY)
 endforeach()
