--- a/GEOS_Util/plots/CMakeLists.txt
+++ b/GEOS_Util/plots/CMakeLists.txt
@@ -1,10 +1,7 @@
-add_executable(zonal.x zonal.f)
+ecbuild_add_executable (TARGET zonal.x SOURCES zonal.f LIBS MAPL_Base)
 if (EXTENDED_SOURCE)
   set_source_files_properties(zonal.f PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
 endif ()
-
-# Dependencies
-target_link_libraries(zonal.x MAPL_Base)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/quickplot ${CMAKE_CURRENT_BINARY_DIR}/quickplot COPYONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/configure ${CMAKE_CURRENT_BINARY_DIR}/configure COPYONLY)
