Fixes cmake REAL8 flag for zeit.

--- a/GMAO_etc/CMakeLists.txt
+++ b/GMAO_etc/CMakeLists.txt
@@ -2,41 +2,49 @@ set (CMAKE_Fortran_FLAGS_RELEASE "-O3 ${GEOS_Fortran_Release_FPE_Flags} ${ALIGNC
 
 ecbuild_add_executable (
   TARGET argopt
-  SOURCES argopt.c)
+  SOURCES argopt.c
+  )
 
 ecbuild_add_executable (
   TARGET fresolv.x
   SOURCES fresolv.f90
-  LIBS GMAO_mpeu)
+  LIBS GMAO_mpeu
+  FFLAGS ${FREAL8})
 
 ecbuild_add_executable (
   TARGET gethdftinc.x
   SOURCES gethdftinc.f
   LIBS GMAO_mpeu ${NETCDF_LIBRARIES} Threads::Threads
-  INCLUDES ${INC_NETCDF})
+  INCLUDES ${INC_NETCDF}
+  FFLAGS ${FREAL8})
 
 ecbuild_add_executable (
   TARGET zeit_ci.x
   SOURCES zeit_ci.f zeit_usage.f
-  LIBS GMAO_mpeu)
+  LIBS GMAO_mpeu
+  FFLAGS ${FREAL8})
 
 ecbuild_add_executable (
   TARGET zeit_co.x
   SOURCES zeit_co.f zeit_usage.f
-  LIBS GMAO_mpeu)
+  LIBS GMAO_mpeu
+  FFLAGS ${FREAL8})
 
 ecbuild_add_executable (
   TARGET zeit_pr.x
   SOURCES zeit_pr.f zeit_usage.f zeit_read.f zeit_jday.f
-  LIBS GMAO_mpeu)
+  LIBS GMAO_mpeu
+  FFLAGS ${FREAL8})
 
 ecbuild_add_executable (
   TARGET mkdrstdate.x
-  SOURCES mkdrstdate.f)
+  SOURCES mkdrstdate.f
+  FFLAGS ${FREAL8})
 
 ecbuild_add_executable (
   TARGET rst_date
-  SOURCES rst_date.f)
+  SOURCES rst_date.f
+  FFLAGS ${FREAL8})
 
 ##### Installation Section #####
 
