--- a/arpack/PARPACK/SRC/MPI/CMakeLists.txt
+++ b/arpack/PARPACK/SRC/MPI/CMakeLists.txt
@@ -8,6 +8,15 @@ set (SRCS
   pcnaup2.f  pdgetv0.f  pdnaup2.f  pdnorm2.f  pdseigt.f  psgetv0.f   psnaup2.f  psnorm2.f  psseigt.f  pznaitr.f  pzneupd.f
   )
 
+# This is equivalent to FOPT=$(FOPT2) in GNU Make
+if (CMAKE_Fortran_COMPILER_ID MATCHES Intel)
+   string (REPLACE "${FOPT3}" "${FOPT2}" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${OPTREPORT0}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${FTZ}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${ALIGN_ALL}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${NO_ALIAS}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+endif ()
+
 esma_add_library (${this}
   SRCS ${SRCS}
   )
