--- a/GMAO_ods/CMakeLists.txt
+++ b/GMAO_ods/CMakeLists.txt
@@ -34,6 +34,13 @@ set (ODSSRC
   ods_do3lev.f
   )
 
+# This is equivalent to FOPT=$(FOPT3) in GNU Make
+if (CMAKE_Fortran_COMPILER_ID MATCHES Intel)
+   string (REPLACE "${OPTREPORT0}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${FTZ}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${ALIGN_ALL}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${NO_ALIAS}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+endif ()
 esma_add_library (${this}
   SRCS ${MODSRC} ${ODSSRC}
   DEPENDENCIES GMAO_mpeu
