--- a/arpack/PARPACK/UTIL/MPI/CMakeLists.txt
+++ b/arpack/PARPACK/UTIL/MPI/CMakeLists.txt
@@ -4,6 +4,15 @@ set (SRCS
   pcmout.f  pcvout.f  pdmout.f  pdvout.f  pivout.f  psmout.f  psvout.f  pzmout.f  pzvout.f
   )
 
+# This is equivalent to FOPT=$(FOPT2) in GNU Make
+if (CMAKE_Fortran_COMPILER_ID MATCHES Intel)
+   string (REPLACE "${FOPT3}" "${FOPT2}" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${OPTREPORT0}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${FTZ}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${ALIGN_ALL}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+   string (REPLACE "${NO_ALIAS}" "" CMAKE_Fortran_FLAGS_RELEASE ${CMAKE_Fortran_FLAGS_RELEASE})
+endif ()
+
 esma_add_library (${this}
   SRCS ${SRCS}
   )
