--- a/GEOS_Util/post/CMakeLists.txt
+++ b/GEOS_Util/post/CMakeLists.txt
@@ -72,7 +72,8 @@ set_property(SOURCE rs2hdf.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOU
 set_property(SOURCE rs_hinterp.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
 set_property(SOURCE time_ave.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
 set_property(SOURCE convert_aerosols.F APPEND_STRING PROPERTY COMPILE_FLAGS ${EXTENDED_SOURCE})
-set_property(SOURCE PWSSSP.F APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${EXTENDED_SOURCE}")
+set_property(SOURCE PWSSSP.F APPEND_STRING PROPERTY COMPILE_FLAGS "${FREAL8} ${EXTENDED_SOURCE} ${BYTERECLEN}")
+set_property(SOURCE alias.F APPEND_STRING PROPERTY COMPILE_FLAGS "${BYTERECLEN}")
 
 target_link_libraries (convert_eta.x ${this} GMAO_hermes MAPL_Base)
 target_link_libraries (eta2prs.x ${this} GMAO_gfio_r4 MAPL_Base GEOS_Shared)
