--- a/GMAO_ods/CMakeLists.txt
+++ b/GMAO_ods/CMakeLists.txt
@@ -55,11 +55,23 @@ ecbuild_add_executable (TARGET ods_sample.x SOURCES ods_sample.f LIBS ${this} ${
 ecbuild_add_executable (TARGET ods_synX2Y.x SOURCES ods_synX2Y.f90 LIBS ${this} ${NETCDF_LIBRARIES})
 ecbuild_add_executable (TARGET ods_tally.x SOURCES ods_tally.f90 LIBS ${this} ${NETCDF_LIBRARIES})
 ecbuild_add_executable (TARGET saber2ods.x SOURCES saber2ods.f LIBS ${this} ${NETCDF_LIBRARIES})
+ecbuild_add_executable (TARGET odslist SOURCES odslist.f LIBS ${this} ${NETCDF_LIBRARIES})
+ecbuild_add_executable (TARGET odsmatch SOURCES odsmatch.f LIBS ${this} ${NETCDF_LIBRARIES})
+ecbuild_add_executable (TARGET odsselect SOURCES odsselect.f LIBS ${this} ${NETCDF_LIBRARIES})
+ecbuild_add_executable (TARGET odsshuffle SOURCES odsshuffle.f LIBS ${this} ${NETCDF_LIBRARIES})
+ecbuild_add_executable (TARGET odsstats SOURCES odsstats.f LIBS ${this} ${NETCDF_LIBRARIES})
+ecbuild_add_executable (TARGET odsemean SOURCES odsemean.f LIBS ${this} ${NETCDF_LIBRARIES})
 
 if (EXTENDED_SOURCE)
   set_target_properties (${this} PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
   set_target_properties (saber2ods.x PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
   set_target_properties (dconv2ods.x PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+  set_target_properties (odsmatch  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+  set_target_properties (odslist  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+  set_target_properties (odsselect  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+  set_target_properties (odsshuffle  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+  set_target_properties (odsstats  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+  set_target_properties (odsemean  PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
 endif()
 
 install(FILES unique_instruments.csh DESTINATION bin)
