More fixes to get plots to work.
* Build regrid2 executable
* Copy more scripts to install/plots
* Add all the subdirs in plots to install/plots
* Remove unneeded compile
* Fix references to programs in plotting/post scripts
* Fix build of `time_ave.x` et al by adding `-Dmpi`

--- a/GEOS_Util/plots/CMakeLists.txt
+++ b/GEOS_Util/plots/CMakeLists.txt
@@ -7,6 +7,15 @@ if (EXTENDED_SOURCE)
   set_source_files_properties(zonal.f PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
 endif ()
 
+set (regrid2_prog_name
+   regrid2_${CMAKE_SYSTEM_NAME}.x
+   )
+
+ecbuild_add_executable (TARGET ${regrid2_prog_name} SOURCES grads_util/regrid2.f)
+if (EXTENDED_SOURCE)
+  set_source_files_properties(regrid2.f PROPERTIES COMPILE_FLAGS ${EXTENDED_SOURCE})
+endif ()
+
 set (plots_progs
    quickplot
    quickstat
@@ -16,9 +25,36 @@ set (plots_progs
    moveplot
    movestat
    get_exports
+   chckhist.new
+   chckhist.old
+   zonal
    )
 
 install (
    PROGRAMS ${plots_progs}
    DESTINATION plots
+   )
+
+# From https://stackoverflow.com/questions/7787823/cmake-how-to-get-the-name-of-all-subdirectories-of-a-directory
+
+MACRO(SUBDIRLIST result curdir)
+  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
+  SET(dirlist "")
+  FOREACH(child ${children})
+    IF(IS_DIRECTORY ${curdir}/${child})
+      LIST(APPEND dirlist ${child})
+    ENDIF()
+  ENDFOREACH()
+  SET(${result} ${dirlist})
+ENDMACRO()
+
+SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Using MESSAGE_NEVER to not overwhelm the installation
+# messages with all these installs
+install (
+   DIRECTORY ${SUBDIRS}
+   DESTINATION plots
+   USE_SOURCE_PERMISSIONS
+   MESSAGE_NEVER
    )
