--- a/GMAO_pyobs/CMakeLists.txt
+++ b/GMAO_pyobs/CMakeLists.txt
@@ -10,3 +10,20 @@ esma_add_library (${this}
   DEPENDENCIES GMAO_gfio_r4
   INCLUDES ${INC_ESMF})
 
+include(UseF2Py)
+
+add_f2py_module(binObs_
+   SOURCES binObs_py.F
+   DESTINATION lib/Python/pyobs
+   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${include_${this}}
+   )
+
+add_f2py_module(IGBP_
+   SOURCES IGBP_py.F90
+   DESTINATION lib/Python/pyobs
+   ONLY getsimpleveg getdetailedveg
+   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${include_${this}}
+   )
+
+file (GLOB python_files pyobs/*.py)
+install (FILES ${python_files} DESTINATION lib/Python/pyobs)
